# ai-crm-sanitizer

./: .env  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: Dockerfile  app.py  environment.py  grader.py  tasks.py
