[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "crm-sanitizer"
version = "1.0.0"
description = "CRM Sanitizer: An OpenEnv benchmark where AI agents clean, audit, and reason over messy customer data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "openenv-core==0.2.3",
    "fastapi==0.135.3",
    "uvicorn==0.43.0",
    "pandas==3.0.2",
    "numpy==2.4.4",
    "tabulate==0.9.0",
    "pydantic>=2.11.7",
    "openai>=2.7.2",
    "python-dotenv==1.2.2",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://huggingface.co/spaces/KoderKartik/crm-sanitizer"